OpenGL Error Message #54211

Closed
opened 2018-03-03 13:13:33 +01:00 by Lars · 8 comments

System Information
Win 10, Nvidia Gtx 730
system-info.txt

Blender Version
Broken: All Versions since 2.78
Worked: 2.77, 2.77a

I tested it with 2.77 to latest test build on two different systems (one with GTX 730, the Other with IntelHD). Some other users from a blenderchat tested it for me, too with the same result.
With Blender in debug mode (--debug fag) in cycles the console prints this error message when in texture display view and there are textured objects in the scene:
K:\BlenderGit\blender\source\blender\windowmanager\intern\wm_event_system.c:2575: ``wm_event_do_handlers'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation
(the "c:2575 has a different number with different Blender builds, this one is from the Blender version in the attached system-info.txt)

Exact steps for others to reproduce the error

  • Start Blender with --debug
  • change to cycles
  • add a material to the cube
  • add a random image texture to the material
  • change to texture display view
  • on moving the object or changing viewport size etc. the error message appears (UV unwrap does not change it)

It does seem to make no harm (?) but i am developing an add on and since it segfaults on certain operations (with a high probability, not always) when in texture display mode (and not in solid display view) i wondered if there might be a connection to this error.

**System Information** Win 10, Nvidia Gtx 730 [system-info.txt](https://archive.blender.org/developer/F2410243/system-info.txt) **Blender Version** Broken: All Versions since 2.78 Worked: 2.77, 2.77a I tested it with 2.77 to latest test build on two different systems (one with GTX 730, the Other with IntelHD). Some other users from a blenderchat tested it for me, too with the same result. With Blender in debug mode (--debug fag) in cycles the console prints this error message when in texture display view and there are textured objects in the scene: K:\BlenderGit\blender\source\blender\windowmanager\intern\wm_event_system.c:2575: ``wm_event_do_handlers'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation (the "c:2575 has a different number with different Blender builds, this one is from the Blender version in the attached system-info.txt) **Exact steps for others to reproduce the error** - Start Blender with --debug - change to cycles - add a material to the cube - add a random image texture to the material - change to texture display view - on moving the object or changing viewport size etc. the error message appears (UV unwrap does not change it) It does seem to make no harm (?) but i am developing an add on and since it segfaults on certain operations (with a high probability, not always) when in texture display mode (and not in solid display view) i wondered if there might be a connection to this error.
Author

Added subscriber: @CoD

Added subscriber: @CoD

Added subscriber: @brecht

Added subscriber: @brecht

I can't reproduce this so far. Can you attach a .blend and image texture, to be sure there isn't anything different about what we are testing with?

I can't reproduce this so far. Can you attach a .blend and image texture, to be sure there isn't anything different about what we are testing with?

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

I can reproduce it with an base material and an Image Texture like Color Grid attached to it on win 7 AMD R7 360 in Texture mode. Tested with build fee4b64, 2.79a RC.
Running with debug-gpu gives the following error:

C:\b\buildbot_vc2013_amd64\win64_cmake_vc2013\blender.git\source\blender\windowmanager\intern\wm_event_system.c:2636: ``wm_event_do_handlers'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation
GL API error: glUniform1i has failed because the operation requires a currently active program object (GL_INVALID_OPERATION)
I can reproduce it with an base material and an Image Texture like Color Grid attached to it on win 7 AMD R7 360 in Texture mode. Tested with build `fee4b64`, 2.79a RC. Running with debug-gpu gives the following error: ``` C:\b\buildbot_vc2013_amd64\win64_cmake_vc2013\blender.git\source\blender\windowmanager\intern\wm_event_system.c:2636: ``wm_event_do_handlers'' -> GL Error (0x0502 - GL_INVALID_OPERATION): Invalid Operation GL API error: glUniform1i has failed because the operation requires a currently active program object (GL_INVALID_OPERATION) ```
Author

Sure, here is a blend.openglerror.blend
(texture is bundled, but in just in case...)2 x 2.png

Sure, here is a blend.[openglerror.blend](https://archive.blender.org/developer/F2410685/openglerror.blend) (texture is bundled, but in just in case...)![2 x 2.png](https://archive.blender.org/developer/F2410770/2_x_2.png)

This issue was referenced by dab20bd41f

This issue was referenced by dab20bd41ff9b2545952fa8715e2467b22900133

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#54211
No description provided.