Fix T54211: OpenGL debug error message in texture draw mode.

Quite harmless and won't be a problem in 2.8.